--- a/index.html
+++ b/index.html
@@ -3,118 +3,7 @@
 <head>
 	<title></title>
 	<style type="text/css">
-		*{
-			padding: 0px;
-			margin: 0px;
-		}
-		ul,li{
-			list-style: none;
-		}
-		#all{
-			position: relative;
-			margin: 0 auto;
-			/*width: 1200px;*/
-		}
-		#title{
-			background-color: rgb(170, 170, 170);
-			height: 20px;
-			line-height: 20px;
-			display: block;
-			width: auto;
-			position: relative;
-			top: 10px;
-			overflow: hidden;
-			/*float: left;*/
-		}
-		#move{
-			display: inline;
-			width: 800px;
-			left: 225px;
-			position: absolute;
-			overflow: hidden;
-		}
-		.imge{
-			line-height: 18px;
-			height: 18px;
-			width: 18px;
-			position: relative;
-			left: 205px;
-			float: left;
-		}
-		img{
-			width: 1200px;
-			height: 397px;
-		}
-		#p{
-			display: inline;
-			position: relative;
-			left: 1200px;
-			line-height: 18px;
-			height: 18px;
-			top: 0px;
-			color: red;
-			font-size: 15px;
-			overflow: hidden;
-			float: left;
-		}
-		.slider{
-			width: 8400px;
-			position: absolute;
-			left: -1200px;
-		}
-		.box{
-			width: 1200px;
-			height: 397px;
-			margin: 100px auto;
-			position: relative;
-			overflow: hidden;
-			top: -75px;
-		}
-		.slide{
-			width: 1200px;
-			overflow: hidden;
-			float: left;
-		}
-		.box>span{
-			display: block;
-			width: 30px;
-			height: 50px;
-			text-align: center;
-			cursor: pointer;
-			color: ;
-			top: 175px;
-			line-height: 50px;
-			background: rgb(255, 0, 0);
-			font-size: 30px;
-			position: absolute;
-			opacity: 0;
-		}
-		#left{
-			left: 30px;
-		}
-		#right{
-			right: 30px;
-		}
-		.nav{
-			position: absolute;
-			left: 500px;
-			bottom: 20px;
-		}
-		.nav>li{
-			float: left;
-			width: 20px;
-			height: 20px;
-			background: #ccc;
-			cursor: pointer;
-			margin: 0 10px;
-			border-radius: 50%;
-			color: rgb(105, 105, 105);
-			text-align: center;
-		}
-		.nav .active{
-			background: red;
-			color: white;
-		}
+		@import url(homework.css);
 	</style>
 </head>
 <body>
@@ -147,123 +36,5 @@
 		</div>
 	</div>
 </body>
-<script type="text/javascript">
-	window.onload = function(){
-	function getStyle(obj, attr){
-		if(obj.currentStyle){
-			return obj.currentStyle[attr];
-		} else {
-			return getComputedStyle(obj, null)[attr];
-		}
-		}
-		function animate(obj,json,callback){
-			clearInterval(obj.timer);
-			obj.timer = setInterval(function(){
-				var isStop = true;
-				for(var attr in json){
-					var now = 0;
-					if(attr == 'opacity'){
-						now = parseInt(getStyle(obj,attr)*100);
-					}else{
-						now = parseInt(getStyle(obj,attr));
-					}
-					var speed = (json[attr] - now) / 8;
-					speed = speed>0?Math.ceil(speed):Math.floor(speed);
-					var cur = now + speed;
-					if(attr == 'opacity'){
-						obj.style[attr] = cur / 100;
-					}else{
-						obj.style[attr] = cur + 'px';
-					}
-					if(json[attr] !== cur){
-						isStop = false;
-					}
-				}
-				if(isStop){
-					clearInterval(obj.timer);
-					callback&&callback();
-				}
-			}, 30)
-		}
-		var p = document.getElementById("p");
-		var box = document.getElementById("box");
-		var oNavlist = document.getElementById("nav").children;
-		var slider = document.getElementById("slider");
-		var left = document.getElementById("left");
-		var right = document.getElementById("right");
-		var index = 1;
-		var timer;
-		var isMoving = false;	
-		var a = setInterval(function(){
-			p.style.left = i+"px";
-			i-=2;
-			if(i <= -400){
-				p.style.left = 800 + 'px';
-				i = parseInt(p.style.left);
-			}
-		},30)
-		
-		box.onmouseover = function(){
-			animate(left, {opacity : 50});
-			animate(right, {opacity : 50});
-			clearInterval(timer);
-		}
-		box.onmouseout = function(){
-			animate(left, {opacity : 0})
-			animate(right, {opacity : 0})
-			timer = setInterval(next,3000)
-		}
-		right.onclick = next;
-		left.onclick = prev;
-		for(var i = 0; i < oNavlist.length; ++i){
-			oNavlist[i].index = i;
-			oNavlist[i].onclick = function(){
-				index = this.index + 1;
-				navmove();
-				animate(slider,{left:-1200 * index});
-			}
-		}	
-		function next(){
-			if(isMoving)
-				return;
-			isMoving = true;
-			index++;
-			navmove();
-			animate(slider,{left:-1200 * index},function(){
-				if(index == 6){
-					slider.style.left = "-1200px";
-					index = 1;
-				}
-				isMoving = false;
-			});
-		}
-		function prev(){
-			if(isMoving)
-				return;
-			isMoving = true;
-			index--;
-			navmove();
-			animate(slider,{left:-1200 * index},function(){
-				if(index == 0){
-					slider.style.left = "-6000px";
-					index = 5;
-				}
-				isMoving = false;
-			});
-		}
-		function navmove(){
-			for(var i = 0; i < oNavlist.length; ++i){
-				oNavlist[i].className = "";
-				if(index === 6){
-					oNavlist[0].className = "active";
-				}else if(index === 0){
-					oNavlist[4].className = "active";
-				}else{
-					oNavlist[index-1].className = "active";
-				}
-			}
-		}
-		timer = setInterval(next,3000);
-		}
-</script>
+<script src="homework.js"></script>
 </html>
